--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-tsparticles": "^2.12.2"
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
