--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "next": "14.0.1",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
