--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-particles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0",
